tests/negative/gold/interfaceB_test.gold
tests/negative/interfaceB_test.toit:4:3: error: Interfaces can't have fields
  x := null
  ^
Compilation failed.
